@@ -588,6 +588,17 @@ static const unsigned char
   };
 
 /*
+  Horizontal-3 pattern.
+*/
+static const unsigned char
+  Horizontal3Image[] =
+  {
+    0x50, 0x34, 0x0A, 0x39, 0x20, 0x39, 0x0A, 0x00, 0x00, 0x00, 0x00, 0x00, 
+    0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 
+    0x00
+  };
+
+/*
   HorizontalSaw pattern.
 */
 static const unsigned char
@@ -768,6 +779,17 @@ static const unsigned char
   };
 
 /*
+  Vertical-2 pattern.
+*/
+static const unsigned char
+  Vertical3Image[] =
+  {
+    0x50, 0x34, 0x0A, 0x39, 0x20, 0x39, 0x0A, 0x24, 0x80, 0x24, 0x80, 0x24, 
+    0x80, 0x24, 0x80, 0x24, 0x80, 0x24, 0x80, 0x24, 0x80, 0x24, 0x80, 0x24, 
+    0x80
+  };
+
+/*
   VerticalBricks pattern.
 */
 static const unsigned char
@@ -866,6 +888,7 @@ static const PatternInfo
     { "HEXAGONS", "PBM", HexagonsImage, sizeof(HexagonsImage) },
     { "HORIZONTAL", "PBM", HorizontalImage, sizeof(HorizontalImage) },
     { "HORIZONTAL2", "PBM", Horizontal2Image, sizeof(Horizontal2Image) },
+    { "HORIZONTAL3", "PBM", Horizontal3Image, sizeof(Horizontal3Image) },
     { "HORIZONTALSAW", "PBM", HorizontalSawImage, sizeof(HorizontalSawImage) },
     { "HS_BDIAGONAL", "PBM", HS_BDIAGONALImage, sizeof(HS_BDIAGONALImage) },
     { "HS_CROSS", "PBM", HS_CROSSImage, sizeof(HS_CROSSImage) },
@@ -884,6 +907,7 @@ static const PatternInfo
       sizeof(SmallFishScalesImage) },
     { "VERTICAL", "PBM", VerticalImage, sizeof(VerticalImage) },
     { "VERTICAL2", "PBM", Vertical2Image, sizeof(Vertical2Image) },
+    { "VERTICAL3", "PBM", Vertical3Image, sizeof(Vertical3Image) },
     { "VERTICALBRICKS", "PBM", VerticalBricksImage,
       sizeof(VerticalBricksImage) },
     { "VERTICALLEFTSHINGLE", "PBM", VerticalLeftShingleImage,
